# todoco

./: .todocoignore  .travis.yml  Cargo.toml  Ideas.md  Readme.md  appconfig.toml  cli.yml  todoco.taskpaper  todoco.toml
.github/workflows/: build.yml  build_nightly.yml  build_release.yml  create_release_artifacts.yml  test.yml  tests.yml
.install/: install.linux.sh  install.mac.sh
.todoco/: project.json
appconfig/: Cargo.toml  appconfig.toml
appconfig/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
config/src/types/: config.rs  mod.rs  projectfile.rs
env_tests/mod_init/: todoco.toml
env_tests/mod_scan/: file1.txt
export/: Cargo.toml
export/src/: lib.rs
export/src/format/: mod.rs
export/src/format/taskpaper/: mod.rs
export/src/taskpaper/: mod.rs
export/src/transition_comparison/: mod.rs
src/: lib.rs  main.rs
src/appconfig/: mod.rs
src/export/: mod.rs
src/export/taskpaper/: mod.rs
src/init/: config.rs  mod.rs  project.rs
src/scan/: data_structures.rs  list.rs  mod.rs  project.rs  sourcefile.rs  todo.rs  todo_regex.rs
src/ui/: dialog_config.rs  mod.rs  print_todo_list.rs
todoco/: Cargo.toml  cli.yml
todoco/src/: lib.rs  main.rs
todoco/src/init/: mod.rs
todoco/src/list/: mod.rs
todoco/src/scan/: mod.rs  todo_regex.rs
todoco/src/scan/handle_files/: mod.rs
todofilter/: Cargo.toml
todofilter/src/: lib.rs
todoscanner/: Cargo.toml
todoscanner/src/: lib.rs
todoscanner/src/scan/: mod.rs
todoscanner/src/scan/handle_files/: mod.rs  todo_regex.rs
types/: Cargo.toml
types/fixtures/config/: todoco.toml
types/fixtures/project/.todoco/: project.json
types/src/: lib.rs
types/src/data_types/: mod.rs  project.rs  tag.rs
types/src/data_types/config/: helper.rs  mod.rs
types/src/data_types/filtermatch/: mod.rs
types/src/data_types/list/: mod.rs
types/src/data_types/meta/: mod.rs
types/src/data_types/project/: mod.rs  updater.rs
types/src/data_types/sourcefile/: mod.rs
types/src/data_types/tag/: mod.rs
types/src/data_types/todo/: mod.rs
ui/: Cargo.toml  welcome_search.txt
ui/src/: dialog_config.rs  helper_old.rs  lib.rs  print_list_matches.rs  print_todo_list.rs  test_console.rs
ui/src/config_dialog/: mod.rs
ui/src/helper/: mod.rs
ui/src/search/: mod.rs
ui/src/search/listterm/: alltagsterm.rs  alltodosterm.rs  mainterm.rs  mod.rs
ui/src/search/pageprinter/: mod.rs  pager.rs
ui/src/search/printer/: mod.rs  tagprinter.rs  textprinter.rs  todoprinter.rs
ui/src/search/term/: alltagsterm.rs  alltodosterm.rs  keywordsearchterm.rs  mainterm.rs  mod.rs
ui/src/search_term/: mod.rs
ui/src/search_term/pageprinter/: mod.rs  pager.rs
ui/src/terminal/: footeroption.rs  mod.rs  searchterm.rs  termdialog.rs
ui/src/terminal/listview/: mod.rs  searchterm.rs  termdialog.rs
(+14 files in other folders)
