[package]
name = "todoco"
version = "0.2.0"
authors = ["Jan Meischner <jan.meischner@daparto.com>"]
edition = "2018"

[dependencies]
ansi_term = "^0.11.0"
clap = {version = "^2.33.0", features= ["yaml"]}
ignore = "^0.4.7"
glob = "^0.3.0"
toml = "^0.4.2"
regex = "^1.1.6"
dialoguer = "^0.3.0"
serde = {version = "^1.0.90", features = ["derive"] }