[package]
name = "todoco"
version = "0.4.3"
authors = ["Jan Meischner <jan.meischner@googlemail.com>"]
edition = "2018"
description = "`todoco` is a CLI to extract, list and work with //ToDo: Comments in your codebase."
license = "GPLv2"
repository = "https://github.com/jmeischner/todoco"

[dependencies]
appconfig = { path = "../appconfig", version = "0.1.0" }
clap = {version = "^2.33.0", features= ["yaml", "suggestions"]}
export = { path = "../export", version = "0.1.0" }
ignore = "^0.4.7"
indicatif = "^0.11.0"
log = "^0.4.6"
regex = "^1.1.6"
simplelog = "^0.6.0"
todofilter = { path = "../todofilter", version = "0.1.0" }
todoscanner = { path = "../todoscanner", version = "0.1.0" }
toml = "^0.4.2"
types = { path = "../types", version = "0.1.0" }
ui = { path = "../ui", version = "0.1.0"}