[package]
name = "types"
version = "0.1.0"
authors = ["janmeischner"]
edition = "2018"

[dependencies]
appconfig = {path = "../appconfig"}
serde = {version = "^1.0.90", features = ["derive"] }
serde_json = "^1.0.0"
toml = "^0.4.2"
strsim = "^0.9.2"
uuid = { version = "^0.7.4", features = ["v4", "serde"]}
log = "^0.4.6"